--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 @keyframes wavesForever {
   from {
     transform: translate3d(-90px, 0, 0);
@@ -21,6 +7,6 @@ code {
   }
 }
 
-.parallax {
+.waveAnimation {
   animation: wavesForever 5s cubic-bezier(0.62, 0.5, 0.38, 0.5) infinite;
 }
