:sparkles: tailwind dash sidemenu list

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -6060,6 +6060,10 @@ video {
   font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.font-roboto {
+  font-family: Roboto;
+}
+
 .font-hairline {
   font-weight: 100;
 }
@@ -23490,6 +23494,10 @@ video {
     font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .sm\:font-roboto {
+    font-family: Roboto;
+  }
+
   .sm\:font-hairline {
     font-weight: 100;
   }
@@ -40827,6 +40835,10 @@ video {
 
   .md\:font-mono {
     font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
+  .md\:font-roboto {
+    font-family: Roboto;
   }
 
   .md\:font-hairline {
@@ -58168,6 +58180,10 @@ video {
     font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .lg\:font-roboto {
+    font-family: Roboto;
+  }
+
   .lg\:font-hairline {
     font-weight: 100;
   }
@@ -75505,6 +75521,10 @@ video {
 
   .xl\:font-mono {
     font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
+  .xl\:font-roboto {
+    font-family: Roboto;
   }
 
   .xl\:font-hairline {
